# tobii-integration

./: .eslintrc.json  .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  INTEGRATION_TEST.md  LICENSE  README.md  TOBII_SDK_COMPATIBILITY.md  TODO.md  package-lock.json  package.json  rollup.config.base.mjs  tsconfig.base.json
.changeset/: README.md  config.json  fix-double-subscribe.md  hide-cursor-and-cleanup.md  initial-release.md
.github/workflows/: README.md  ci.yml  python-ci.yml  release-python.yml  release.yml
docs/: calibration-guide.md  extension-api.md  getting-started.md  troubleshooting.md  tutorial.md
examples/basic-experiment/: README.md  experiment.html
examples/smooth-pursuit/: experiment.html
examples/visual-search-experiment/: experiment.html  experiment.js  stimuli.js  styles.css
python/: ADAPTER_GUIDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_sdk_compatibility.py
python/jspsych_tobii/: __init__.py  calibration.py  cli.py  config.py  data_buffer.py  logger.py  server.py  time_sync.py  tobii_manager.py  websocket_handler.py
python/jspsych_tobii/adapters/: __init__.py  base.py  factory.py  mock.py  tobii_pro.py  tobii_x_series.py
python/tests/: test_calibration.py  test_config.py  test_data_buffer.py  test_mock_adapter.py  test_time_sync.py  test_tobii_manager.py
scripts/: build-all.sh  run-server.sh  setup-dev.sh  test-all.sh
